--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/2048.loader.js";
       var config = {
-        dataUrl: buildUrl + "/2048.data.gz",
-        frameworkUrl: buildUrl + "/2048.framework.js.gz",
-        codeUrl: buildUrl + "/2048.wasm.gz",
+        dataUrl: buildUrl + "/2048.data",
+        frameworkUrl: buildUrl + "/2048.framework.js",
+        codeUrl: buildUrl + "/2048.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Falling Numbers",
