--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                 align-items: center;
             }
             #icon {                
-                max-width: 360px;
+                <!-- max-width: 360px; -->
+                width: 360px;
+                height: 240px;
                 border-radius: 10px;
                 margin-bottom: 20px;
             }
