--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 width: 100%;
                 height: 100%;
                 padding: 0px;
-                margin: 0px;
+                margin: 0px;                
             }
             .fullscreen {
                 background: #383838;
@@ -49,6 +49,7 @@
                 background: #8444FF;
             }
         </style>
+        <link rel="stylesheet" type="text/css" href="./instant-games-bridge-vk-banner-extension.css">
     </head>
     <body>
         <canvas id="canvas" class="fullscreen"></canvas>
@@ -56,6 +57,7 @@
             <img id="icon" src="./2goPlay.png" />
             <div id="progress-bar"><div id="progress-bar-fill"></div></div>
         </div>
+        <script src="./instant-games-bridge-vk-banner-extension.js"></script>
         <script src="./instant-games-bridge.js"></script>
         <script>
             if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
