return old build format
return old build format

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                         createUnityInstance(
                             canvas,
                             {
-                                dataUrl: 'Build/2048.data.gz',
-                                frameworkUrl: 'Build/2048.framework.js.gz',
-                                codeUrl: 'Build/2048.wasm.gz',
+                                dataUrl: 'Build/2048.data',
+                                frameworkUrl: 'Build/2048.framework.js',
+                                codeUrl: 'Build/2048.wasm',
                                 streamingAssetsUrl: 'StreamingAssets',
                                 companyName: 'togoplay',
                                 productName: '2048 Числопад',
