--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 align-items: center;
             }
             #icon {                
-                <!-- max-width: 360px; -->
-                width: 360px;
+                <!-- max-width: 240px; -->
+                width: 240px;
                 height: 240px;
                 border-radius: 10px;
                 margin-bottom: 20px;
@@ -54,7 +54,7 @@
     <body>
         <canvas id="canvas" class="fullscreen"></canvas>
         <div id="loading-overlay" class="fullscreen">
-            <img id="icon" src="./2goPlay.png" />
+            <img id="icon" src="./icon.png" />
             <div id="progress-bar"><div id="progress-bar-fill"></div></div>
         </div>
         <script src="./instant-games-bridge-vk-banner-extension.js"></script>
